Agentforce/force-app/main/default/objects/Commitment__c/Commitment__c.object-meta.xml
<CustomObject>
    <description>AD-784 - custom object to capture Commitments made against a Contract</description>
    <label>Commitment</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Commitments No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>