Agentforce/force-app/main/default/objects/Commitment__c/fields/Approach__c.field-meta.xml
<CustomField>
    <fullName>Approach__c</fullName>
    <description>AD-784 - identifying the approach of the commitment</description>
    <label>Approach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>