Agentforce/force-app/main/default/objects/Commitment__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
            <value>
                <fullName>Auditing</fullName>
            </value>
            <value>
                <fullName>Awards</fullName>
            </value>
            <value>
                <fullName>Benchmark</fullName>
            </value>
            <value>
                <fullName>Bid Commitment</fullName>
            </value>
            <value>
                <fullName>CAFM</fullName>
            </value>
            <value>
                <fullName>Client Feedback</fullName>
            </value>
            <value>
                <fullName>Client Strategic Update</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Complaint Trend</fullName>
            </value>
            <value>
                <fullName>Continuous Imp.</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Cost Analysis</fullName>
            </value>
            <value>
                <fullName>Cost Savings</fullName>
            </value>
            <value>
                <fullName>Efficiency</fullName>
            </value>
            <value>
                <fullName>Engagement</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>H&amp;S</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>KPI</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Mystery Shopping</fullName>
            </value>
            <value>
                <fullName>NPS Survey</fullName>
            </value>
            <value>
                <fullName>OCS Promotion</fullName>
            </value>
            <value>
                <fullName>One Team</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>