Agentforce/force-app/main/default/objects/Commitment__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <description>AD-784 - text area to capture the commitment details</description>
    <label>Commitment</label>
    <type>TextArea</type>
</CustomField>