Agentforce/force-app/main/default/objects/Commitment__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>AD-784 - date to capture when the commitment was completed</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>