Agentforce/force-app/main/default/objects/Commitment__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <description>AD-874 - master detail relationship to Contract from Commitment</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>