Agentforce/force-app/main/default/objects/Commitment__c/fields/Contract_Commitments_CaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>Contract_Commitments_CaseSafeID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <label>Contract Commitments CaseSafeID</label>
    <type>Text</type>
</CustomField>