Agentforce/force-app/main/default/objects/Commitment__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>AD-784 - date to capture when the commitment is due</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>