Agentforce/force-app/main/default/objects/Commitment__c/fields/Legacy_OCS__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS__c</fullName>
    <description>AD-874 - text field to capture the Id of the legacy OCS Commitments record</description>
    <label>Legacy OCS Commitments Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>