Agentforce/force-app/main/default/objects/Commitment__c/fields/Legacy_OCS_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_OCS_ID__c</fullName>
    <description>AD-874 - text field to capture the Id of the legacy OCS Commitments record</description>
    <label>Legacy OCS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>