Agentforce/force-app/main/default/objects/Commitment__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <description>AD-874 - field to capture the responsibility of the Commitment</description>
    <label>Responsibility</label>
    <length>80</length>
    <type>Text</type>
</CustomField>