Agentforce/force-app/main/default/objects/Commitment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>AD-784 - field to capture the status of the commitment</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <isActive>false</isActive>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Ongoing</fullName>
                <isActive>false</isActive>
                <label>Ongoing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>