Agentforce/force-app/main/default/objects/Commitment__c/fields/System_Trigger_Status_Scheduled_Flow__c.field-meta.xml
<CustomField>
    <fullName>System_Trigger_Status_Scheduled_Flow__c</fullName>
    <description>Ticked where a Status update is required by the Status Scheduled Flow. This could be where Status needs updating to In Progress or to Overdue.</description>
    <formula>AND(
				 ISPICKVAL(Type__c,&quot;Fixed-Term&quot;),
				 TEXT(Status__c) != &apos;Complete&apos;,
				OR(
								AND(
												ISPICKVAL(Status__c,&quot;In Progress&quot;),
												Due_Date__c &lt; TODAY()
												),
								AND(
												ISPICKVAL(Status__c, &quot;Overdue&quot;),
												Due_Date__c &gt; TODAY()
												)
								)
				)</formula>
    <label>System: Trigger Status Scheduled Flow</label>
    <type>Checkbox</type>
</CustomField>