Agentforce/force-app/main/default/objects/Commitment__c/fields/Win_Theme__c.field-meta.xml
<CustomField>
    <fullName>Win_Theme__c</fullName>
    <description>AD-874 - text area to capture the win theme against a Commitment</description>
    <label>Win Theme</label>
    <type>TextArea</type>
</CustomField>