Agentforce/force-app/main/default/objects/Commitment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Completion_Date__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>